--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,4 @@
 @import "tailwindcss/utilities";
 @import "tailwindcss/components";
 
-& {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&family=Inter:wght@400;700&family=Lora:wght@400;700&display=swap");
